# distributed_coverage

./: CMakeLists.txt  README.md  package.xml
msg/: EntryExit.msg  Identify.msg  OptCtrl.msg  OptUpdate.msg
scripts/: Maxcoverage2.py  Maxcoverage3.py  MaxcoverageY.py  rostutorial.py
