<?xml version="1.0"?>
<package>
  <name>distributed_coverage</name>
  <version>0.0.1</version>
  <description>ROS Node for distributed coverage optimization of a network of pan-tilt cameras</description>

  <maintainer email="Christopher.Sacca@tufts.edu">Christopher Sacca</maintainer>

  <license>BSD</license>

  <author email="Christopher.Sacca@tufts.edu">Christopher Sacca</author>
  <author email="Steven.Santos@tufts.edu">Steven Santos</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>


</package>
